Incremental update to founders css + js

--- a/app/views/founders/index.html.haml
+++ b/app/views/founders/index.html.haml
@@ -1,2 +1,20 @@
-%h1 Founders#index
-%p Find me in app/views/founders/index.html.haml
+%article.overlay
+  #vision.slide
+    #mission.one
+      %h1 On a mission to fuel my startup while advancing my craft.
+      %p {Founder's Why}
+      %h6 Next: What I'm Best At +
+    #shipping.two
+      %h1 What Is Design Synthesis?
+      %p  Talk about intersection of experience, design, culture, and code.
+      %h5 Blend this in to a paragraph: HTML5, CSS3, jQuery &amp; Rails 3
+      %h6 Next: Let's Talk +      
+    #talk.four
+      %h1 If you're making something awesome and want to find a way to work together, let's talk! 
+      %p {contact info}
+  %aside
+    #founder
+      %h6
+%footer
+  #identity 
+    %h1
