--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,58 @@
 %html
   %head
     = csrf_meta_tag
+    = stylesheet_link_tag "base"
     /[if lt IE 9]
       = javascript_include_tag 'html5'
+    /
+      \/*
+      * MyFonts Webfont Build ID 797631, 2011-05-05T18:07:44-0400
+      *
+      * The fonts listed in this notice are subject to the End User License
+      * Agreement(s) entered into by the website owner. All other parties are
+      * explicitly restricted from using the Licensed Webfonts(s).
+      *
+      * You may obtain a valid license at the URLs below.
+      *
+      * Webfont: Museo Sans 100
+      * URL: http://new.myfonts.com/fonts/exljbris/museo-sans/100/
+      * Foundry: exljbris
+      * Copyright: Copyright (c) 2008 by Jos Buivenga. All rights reserved.
+      * License: http://www.myfonts.com/viewlicense?1056
+      * Licensed pageviews: 10,000/month
+      * CSS font-family: MuseoSans-100
+      * CSS font-weight: normal
+      *
+      * (c) 2011 Bitstream Inc
+      */
+    %link{:href => "/stylesheets/fonts/MyFontsWebfontsOrderM2646663.css", :rel => "stylesheet", :type => "text/css"}/  
+    = stylesheet_link_tag "extra/jquery.countdown" 
+    = stylesheet_link_tag "extra/jquery.slider"
   %body
-    = yield
+    #container.profile
+      %header
+        %nav
+        %hgroup#countdown
+          %h1 NEXT FOUNDER
+          %h2#noSec 
+      = yield
     = javascript_include_tag :defaults
+    = javascript_include_tag "extra/bgstretcher"
+    :javascript
+      $(document).ready(function(){
+        $("#container").bgStretcher({
+          images: ['/images/assets/profiles/shuttle_launch_1280_br.png'], 
+          imageWidth: 1120, 
+          imageHeight: 1440
+        });
+      });
+    = javascript_include_tag "extra/jquery.countdown.min"
+    :javascript
+      $('#noSec').countdown({
+        until: $.countdown.UTCDate(-5, 2011, 7 - 1, 26, 12),
+        format: 'DHM',
+        labels1: ['Years', 'Months', 'Weeks', 'Days', 'Hours', 'Minutes', 'Secs'] 
+      });
+    = javascript_include_tag "extra/jquery.slider.min"
+    :javascript
+      $('#vision').slider({autoplay: false});
