--- a/app/views/founders/index.html.haml
+++ b/app/views/founders/index.html.haml
@@ -5,9 +5,8 @@
       %p {Founder's Why}
       %h6 Next: What I'm Best At +
     #shipping.two
-      %h1 What Is Design Synthesis?
-      %p  Talk about intersection of experience, design, culture, and code.
-      %h5 Blend this in to a paragraph: HTML5, CSS3, jQuery &amp; Rails 3
+      %h1 Talk about intersection of experience, design, culture, and code.
+      %p Blend this in to a paragraph: HTML5, CSS3, jQuery &amp; Rails 3
       %h6 Next: Let's Talk +      
     #talk.four
       %h1 If you're making something awesome and want to find a way to work together, let's talk! 
