--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,7 +42,7 @@
     :javascript
       $(document).ready(function(){
         $("#container").bgStretcher({
-          images: ['/images/assets/profiles/shuttle_launch_1280_br.png'], 
+          images: ['/images/assets/profiles/shuttle_launch_1280_br.jpg'], 
           imageWidth: 1120, 
           imageHeight: 1440
         });
