--- a/app/views/founders/index.html.haml
+++ b/app/views/founders/index.html.haml
@@ -1,16 +1,17 @@
 %article.overlay
-  #vision.slide
+  #vision.slide 
+  //no slide
     #mission.one
       %h1 On a mission to fuel my startup while advancing my craft.
-      %p {Founder's Why}
-      %h6 Next: What I'm Best At +
+      %p A hybrid designer + developer, I am at my best when building design practices into every element of a product, community, and experience.     
     #shipping.two
       %h1 Talk about intersection of experience, design, culture, and code.
-      %p Blend this in to a paragraph: HTML5, CSS3, jQuery &amp; Rails 3
-      %h6 Next: Let's Talk +      
-    #talk.four
+      // what i do
+      %p Blend this in to a paragraph: HTML5, CSS3, jQuery, Rails 3, UX, &amp; communities of innovation.      
+      // link to shoshin
+    #talk.three
       %h1 If you're making something awesome and want to find a way to work together, let's talk! 
-      %p {contact info}
+      // %p office hours - 4 slots to talk a week, 1 day of free work for projects I love. 
   %aside
     #founder
       %h6
