--- a/app/views/founders/index.html.haml
+++ b/app/views/founders/index.html.haml
@@ -2,7 +2,8 @@
   #vision.slide 
     #mission.one
       %h1 On a mission to fuel my startup while advancing my craft.
-      %p A hybrid designer + developer, I am at my best when building design practices into every element of a product, community, and experience.     
+      %h3 A hybrid designer + developer 
+      %p At my best building design practices into every element of a product, community, and experience.     
     #shipping.two
       %h1 Talk about intersection of experience, design, culture, and code.
       %p Blend this in to a paragraph: HTML5, CSS3, jQuery, Rails 3, UX, &amp; communities of innovation.      
